--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="black-translucent"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./images/icon-192x192.png" />
+    <link rel="apple-touch-icon" href=".images/icon-512x512.png" />
     <title>Tippy - Tip Calculator</title>
   </head>
   <body>
